--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "files": ["src/index.ts"],
   "compilerOptions": {
     "target": "es2021",
-    "module": "commonjs",
+    "module": "es2020",
+    "moduleResolution": "node",
     "declaration": true,
     "outDir": "./dist",
     "noEmit": false,
