--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "files": ["src/index.ts"],
   "compilerOptions": {
     "target": "es2021",
-    "module": "es2020",
+    "module": "commonjs",
     "moduleResolution": "node",
     "declaration": true,
     "outDir": "./dist",
